<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linearLayout2"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/editdialog_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/editdialog_title"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/visible"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/show"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/label_default"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:text="@string/default_value"
			app:layout_constraintBottom_toBottomOf="@+id/edit_default"
			app:layout_constraintEnd_toStartOf="@+id/edit_default"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/edit_default" />

		<EditText
			android:id="@+id/edit_default"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:ems="10"
			android:inputType="numberSigned"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/check_default"
			app:layout_constraintTop_toTopOf="parent"
			android:importantForAutofill="no" tools:targetApi="o" />

		<CheckBox
			android:id="@+id/check_default"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/label_min"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:text="@string/minimal_value"
			app:layout_constraintBottom_toBottomOf="@+id/edit_min"
			app:layout_constraintEnd_toStartOf="@+id/edit_min"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/edit_min" />

		<EditText
			android:id="@+id/edit_min"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:ems="10"
			android:inputType="numberSigned"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/check_minimal"
			app:layout_constraintTop_toTopOf="parent"
			android:importantForAutofill="no" tools:targetApi="o" />

		<CheckBox
			android:id="@+id/check_minimal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:contentDescription="@string/todo"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/label_max"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:text="@string/maximal_value"
			app:layout_constraintBottom_toBottomOf="@+id/edit_max"
			app:layout_constraintEnd_toStartOf="@+id/edit_max"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/edit_max" />

		<EditText
			android:id="@+id/edit_max"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			android:ems="10"
			android:inputType="numberSigned"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/check_maximal"
			app:layout_constraintTop_toTopOf="parent"
			android:importantForAutofill="no" tools:targetApi="o" />

		<CheckBox
			android:id="@+id/check_maximal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	</android.support.constraint.ConstraintLayout>
</LinearLayout>