<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout_field"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<TextView
		android:id="@+id/label"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/bp_add"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<fr.apocalypse.gestionpersonnage.DataImageButton
		android:id="@+id/bp_add"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/add"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/bp_edit"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@android:drawable/ic_menu_add" />

	<fr.apocalypse.gestionpersonnage.DataImageButton
		android:id="@+id/bp_edit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/edit"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/bp_reset"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@android:drawable/ic_menu_edit" />

	<fr.apocalypse.gestionpersonnage.DataImageButton
		android:id="@+id/bp_reset"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/reset"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/bp_remove"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@android:drawable/ic_menu_revert" />

	<fr.apocalypse.gestionpersonnage.DataImageButton
		android:id="@+id/bp_remove"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:contentDescription="@string/reset"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		app:srcCompat="@android:drawable/ic_menu_delete" />

</android.support.constraint.ConstraintLayout>